# infyproject

./: .gitignore  README.md  app.py  g1_env.py  pipeline.py  pyproject.toml  rl_train.py
extra/: COMMANDS.md  angle.py  angles.json  generated_script.md  main.py  nvidia_demo.py  script_generator.py  stickfigure.py
pipeline_output/: pipeline_result.json  trajectory.json
pipeline_output/rl/: ppo_config.json  ppo_result.json
robot_assets/unitree_g1/: g1_custom_collision_29dof.urdf
static/: index.html
