[project]
name = "infyproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "google-genai>=1.0.0",
    "gradio-client>=1.3.0",
    "python-multipart>=0.0.9",
    "mediapipe>=0.10.35",
    "numpy>=2.4.6",
    "openai>=2.38.0",
    "opencv-python>=4.13.0.92",
    "python-dotenv>=1.2.2",
    "requests>=2.32.0",
    "scipy>=1.17.1",
    "uvicorn[standard]>=0.34.0",
    "gymnasium>=1.2.3",
    "stable-baselines3>=2.8.0",
    "mujoco>=3.9.0",
]
